src/components/result/ResultBoard.module.css
.decisionsBoard {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 50px;
}
p {
  color: white;
  font-size: 1.1rem;
  margin-top: 0px;
}

.playAgainButton {
  width: 100%;
  white-space: nowrap;
}
.playAgainButton:hover {
  color: white;
  background-color: transparent;
  box-shadow: inset 0 0 0 1px white;
  border-color: white;
}
.playerDecision {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 30px;
}
.resultContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  animation-name: grow;
  animation-duration: 4s;
}
@keyframes grow {
  from {
    width: 0%;
  }
  to {
    width: 100%;
  }
}
.resultContainer > p {
  color: white;
  font-size: 3rem;
  margin: 0px;
  white-space: nowrap;
}

